HVAC Backup 2/objects/Price_Master__c(1).object
<CustomObject>
    <fields>
        <fullName>Customer_Price_Percent__c</fullName>
        <label>Customer Price Percent (%)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Customer_Price__c</fullName>
        <label>Customer Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Dealer_Price_Percent__c</fullName>
        <label>Dealer Price Percent (%)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Dealer_Price__c</fullName>
        <label>Dealer Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Family__c</fullName>
        <label>Family</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MG_FAM_Sub__c</fullName>
        <formula>Lower(Material_Group__c) + Family__c + Sub_Family__c</formula>
        <label>MG+FAM+Sub</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Material_Group__c</fullName>
        <label>Material Group</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_Family__c</fullName>
        <label>Sub Family</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Price Master</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Material_Group__c</columns>
        <columns>Family__c</columns>
        <columns>Sub_Family__c</columns>
        <columns>Customer_Price__c</columns>
        <columns>Dealer_Price__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PM-{0000}</displayFormat>
        <label>Price Master Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Price Masters</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>